# masneyb.._..gftp

./: .gitignore  README.md  meson.build  meson_options.txt
docs/: create_portable_gftp.sh  gftp.desktop
lib/: meson.build  misc.c
po/: POTFILES  am.po  ar.po  as.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  eo.po  es.po  eu.po  fi.po  fr.po  ga.po  gftp.pot  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  it.po  ja.po  kn.po  ko.po  lt.po  lv.po  meson.build  mk.po  ml.po  mr.po  (+28 more)
src/gtk/: bookmarks.c  bookmarks_edit_entry.c  chmod_dialog.c  gftp-gtk.c  gftp-gtk.h  gtkui_transfer.c  menu-items.c  meson.build  misc-gtk.c  options_dialog.c  transfer.c  view_dialog.c
src/text/: meson.build
